# twitch-bot

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: rust.yaml
auth/: Cargo.toml
auth/src/: token.rs  user.rs
bot-message-saver/: Cargo.toml
bot-message-saver/src/: handler.rs  main.rs
bot-token-validator/: Cargo.toml
bot-token-validator/src/: main.rs
bot-watch-time/: Cargo.toml
bot-watch-time/src/: main.rs
cache/: Cargo.toml
cache/src/: lib.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entity/: account.rs  bot.rs  channel.rs  chat_message.rs  command.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  stream_history.rs  user.rs  viewer.rs  watch_time.rs
database/src/handler/: bot.rs  channel.rs  chat.rs  mod.rs  token.rs  user.rs  watchtime.rs
parser/: Cargo.toml
parser/src/: clearmsg_tag.rs  irc_parser.rs  lib.rs  privmsg_tag.rs  test.rs
prisma/: schema.prisma
prisma/migrations/20230227144038_chat_messages/: migration.sql
twitch-api/: Cargo.toml
twitch-api/src/: lib.rs
twitch-bot-saver/: Cargo.toml
twitch-bot-saver/src/: handler.rs  main.rs
twitch-watch-time/: Cargo.toml
twitch-watch-time/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/database/: db.rs  mod.rs
utils/src/database/entity/: channel.rs  chat_message.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
utils/src/parser/: clearmsg_tag.rs  irc_parser.rs  mod.rs  privmsg_tag.rs
utils/src/websocket/: client.rs
websocket/: Cargo.toml
websocket/src/: client.rs  config.rs  lib.rs  messages.rs
