[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
database = { path = "../database" }
cache = { path = "../cache" }
reqwest = { version = "0.11.14", features = [
    "serde_json",
    "tokio-rustls",
    "rustls-tls",
    "rustls-tls-native-roots",
    "json",
    "tokio-util",
    "tokio-socks",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
thiserror = "1.0.39"
