[package]
name = "bot-message-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenvy = "0.15.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
websocket = { path = "../websocket" }
database = { path = "../database" }
parser = { path = "../parser" }
chrono = { version = "0.4.23", features = ["serde"] }
