[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
redis = { version = "0.22.3", features = [
    "tokio",
    "serde",
    "serde_json",
    "r2d2",
    "tls",
    "json",
    "rand",
    "cluster",
    "aio",
    "tokio-comp",
    "tokio-native-tls",
    "tokio-native-tls-comp",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
