[package]
name = "twitch-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.14", features = [
    "serde_json",
    "tokio-rustls",
    "rustls-tls",
    "rustls-tls-native-roots",
    "json",
    "tokio-util",
    "tokio-socks",
] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
database = { path = "../database" }
auth = { path = "../auth" }
futures = "0.3.27"
async-recursion = "1.0.2"
