[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = [
    "tokio-rustls",
    "rustls",
    "rustls-tls-native-roots",
] }
futures-util = { version = "0.3.26", features = ["sink", "std"] }
database = { path = "../database" }
cache = { path = "../cache" }
